# fgas

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/mains/: CMakeLists.txt  main.f90
src/modules/: CMakeLists.txt  constants.f90  crossover.f90  kinds.f90  mutation.f90  random.f90  selection.f90  system.f90  util.f90
src/tests/: CMakeLists.txt  test_kinds.f90  test_random.f90
